ver 1.0 html 뼈대

--- a/index.html
+++ b/index.html
@@ -1,8 +1,68 @@
 <!DOCTYPE html>
 <html>
     <head></head>
-    <title>코딩연습</title>
-    <body>웹 프론트엔드 <strong>개발을</strong> 시작합니다.</body>
-    <div></div>
-    <button type="submit"><a href="https://www.naver.com"><strong>네이버</strong></a></button>
+    <body>
+        <img src="https://www.instagram.com/static/images/web/mobile_nav_type_logo.png/735145cfe0a4.png"/>
+        <input type="search" value="검색"/>
+        <div>
+            <img src="image/profile.png"width="50px"/>
+        <div>
+                <h2>kroko314_id</h2>
+                <button>프로필 편집</button>
+            </div>    
+        </div>
+            <p>
+            <strong>
+            강성진 (Sungjin Kang)<br/>
+            </strong>
+            개발자
+            </p>
+        <div>
+            <p>
+                <a href="https://kroko314.github.io">kroko314.github.io</a>
+            </p>
+        </div>
+        <div>
+            <div>
+            <img src="image/hl1.jpg"height="35px"/>
+                <div>
+                    😊
+                </div>
+            </div>
+            <div>
+                <div>
+                    <img src="image/hl2.jpg"height="35px"/>
+                </div>
+                <div>
+                😁
+                </div>
+            </div>
+            
+        </div>
+        <div>
+            <div>
+                게시물<br/>
+                1330
+            </div>
+            <div>
+                팔로워<br/>
+                408000<br/>
+            </div>
+                팔로우<br/>
+                1890
+            </div>
+        </div>
+        <div>아이콘이 들어갈 자리</div>
+        <div>
+            <img src="image/thumbnails/1.jpg"width="32%"/>
+            <img src="image/thumbnails/2.jpg"width="32%"/>
+            <img src="image/thumbnails/3.jpg"width="32%"/>
+            <img src="image/thumbnails/4.jpg"width="32%"/>
+            <img src="image/thumbnails/5.jpg"width="32%"/>
+            <img src="image/thumbnails/6.jpg"width="32%"/>
+            <img src="image/thumbnails/7.jpg"width="32%"/>
+            <img src="image/thumbnails/8.jpg"width="32%"/>
+            <img src="image/thumbnails/9.jpg"width="32%"/>
+        </div>
+    </body>
 </html>
